# MT-Ping-Pong

./: CMakeLists.txt  README.md  data.json  main.cpp
include/: datareader.hpp  gamer.hpp  pingpong.hpp  team.hpp
src/: main.cpp
win/: CMakeLists.txt
